Task #28543 - fix z-indexes for fix-header over open-menu list and then mainmenu list over fix-header

--- a/src/components/DataTable/dataTable.scss
+++ b/src/components/DataTable/dataTable.scss
@@ -197,7 +197,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        z-index: 1;
+        z-index: 3;
         height: 42px;
         padding: 13px 10px 12px;
         background: rgba(255,255,255,0.9);
