--- a/src/layout/Nav/nav.scss
+++ b/src/layout/Nav/nav.scss
@@ -74,7 +74,7 @@ $nav-links-color: #b0b2b4;
       vertical-align: top;
       text-align: center;
       position: relative;
-      z-index: 2;
+      z-index: 4;
 
       a {
         color: #b0b2b4;
